2005-07-29  Murray Cumming  <murrayc@murrayc.com>

	* glom/document/document_glom.cc:
	* glom/document/document_glom.h: Added 
	get/set_layout_current() and 
	get/set_layout_record_viewed() for remembering
	(not saving in the document) information about 
	the last-viewed records and layouts.
	* glom/mode_data/box_data.cc:
	* glom/mode_data/box_data.h: Added get_layout_name().
	* glom/mode_data/box_data_details.cc: fill_from_database():
	Remember the record.
	* glom/mode_data/notebook_data.cc:
	* glom/mode_data/notebook_data.h: Override on_switch_page_handler() 
	so we can remember the last-viewed layout.
	init_db_details(): Open the last-viewed record and switch to the 
	last-viewed layout.
	* glom/notebook_glom.h: Make on_switch_page_handler() virtual.

2005-07-28  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/box_data_list.cc:
	* glom/mode_data/box_data_list.h: Added 
	get_primary_key_value_first()
	* glom/mode_data/notebook_data.cc: init_db_details(): Show the first 
	record from the list in the detauls.
	* glom/notebook_glom.cc: on_switch_page_handler(): 
	Do not call load_from_document() on the child page. It is 
	superfluous.
	* glom/utility_widgets/db_adddel/glom_db_treemodel.cc:
	get_key_value(): Retrieve the data from the database 
	if necessary. Previously we always called get_value() 
	first.

2005-07-28  Murray Cumming  <murrayc@murrayc.com>

	* glom/data_structure/field.cc:
	* glom/data_structure/field.h: Added sql_find(), like sql(), 
	but with wildcards.
	* glom/glom.glade: Added a dialog for finding an ID.
	* glom/utility_widgets/Makefile.am:
	* glom/utility_widgets/dialog_choose_id.cc:
	* glom/utility_widgets/dialog_choose_id.h: Added dialog.
	* glom/mode_data/box_data.cc: get_find_where_clause(): 
	Use sql_find() to do a substring search.
	* po/POTFILES.in: Added the new .cc file.
	* glom/mode_data/box_data_list.cc:
	* glom/mode_data/box_data_list.h: Added set_read_only() 
	to prevent editing when the list is only for selection. 