@@ -18,6 +18,6 @@
 
 </table><table name="products" title="Products"><fields><field name="product_id" title="Product ID" primary_key="true" unique="true" auto_increment="true" type="Number"><formatting format_thousands_separator="true" format_decimal_places="2"/></field><field name="comment" title="Comment" type="Text"><formatting format_thousands_separator="true" format_decimal_places="2"/></field><field name="description" title="Description" type="Text"><formatting format_thousands_separator="true" format_decimal_places="2"/></field><field name="name" title="Name" type="Text"><formatting format_thousands_separator="true" format_decimal_places="2"/></field><field name="price" title="Price" type="Number"><formatting format_thousands_separator="true" format_decimal_places_restricted="true" format_decimal_places="2" format_currency_symbol="EUR"/></field><field name="vat_percent" title="Vat Percent" default_value="16" type="Number"><formatting format_thousands_separator="true" format_decimal_places_restricted="true" format_decimal_places="2"/></field></fields><relationships/><data_layouts><data_layout name="details" parent_table="products"><data_layout_groups><data_layout_group name="header" title="Overview" columns_count="2" sequence="1"><data_layout_item name="product_id" relationship="" use_default_formatting="true" sequence="1"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="name" relationship="" editable="true" use_default_formatting="true" sequence="2"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item></data_layout_group><data_layout_group name="main" title="Details" columns_count="2" sequence="2"><data_layout_item name="description" relationship="" editable="true" use_default_formatting="true" sequence="1"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="price" relationship="" editable="true" use_default_formatting="true" sequence="2"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="vat_percent" relationship="" editable="true" use_default_formatting="true" sequence="3"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="comment" relationship="" editable="true" use_default_formatting="true" sequence="4"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item></data_layout_group></data_layout_groups></data_layout><data_layout name="list" parent_table="products"><data_layout_groups><data_layout_group name="main" title="" columns_count="1" sequence="1"><data_layout_item name="product_id" relationship="" use_default_formatting="true" sequence="1"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="name" relationship="" editable="true" use_default_formatting="true" sequence="2"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="price" relationship="" editable="true" use_default_formatting="true" sequence="3"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="description" relationship="" editable="true" use_default_formatting="true" sequence="4"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="comment" relationship="" editable="true" use_default_formatting="true" sequence="5"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item></data_layout_group></data_layout_groups></data_layout></data_layouts><reports/>
 
-</table><table name="staff" title="Staff"><fields><field name="staff_id" title="Staff ID" primary_key="true" unique="true" auto_increment="true" type="Number"><formatting format_thousands_separator="true" format_decimal_places="2"/></field><field name="name_title" title="Title" type="Text"><formatting format_thousands_separator="true" format_decimal_places="2"/></field><field name="name_first" title="First Name" type="Text"><formatting format_thousands_separator="true" format_decimal_places="2"/></field><field name="name_second" title="Second Name" type="Text"><formatting format_thousands_separator="true" format_decimal_places="2"/></field><field name="name_last" title="Last Name" type="Text"><formatting format_thousands_separator="true" format_decimal_places="2"/></field><field name="address_street" title="Street" type="Text"><formatting format_thousands_separator="true" format_decimal_places="2"/></field><field name="address_town" title="Town" type="Text"><formatting format_thousands_separator="true" format_decimal_places="2"/></field><field name="address_state" title="State" type="Text"><formatting format_thousands_separator="true" format_decimal_places="2"/></field><field name="address_country" title="Country" type="Text"><formatting format_thousands_separator="true" format_decimal_places="2"/></field><field name="address_postcode" title="Postcode" type="Text"><formatting format_thousands_separator="true" format_decimal_places="2"/></field><field name="date_of_birth" title="Date Of Birth" type="Date"><formatting format_thousands_separator="true" format_decimal_places="2"/></field></fields><relationships/><data_layouts><data_layout name="details" parent_table="staff"><data_layout_groups><data_layout_group name="header" title="Overview" columns_count="2" sequence="1"><data_layout_item name="staff_id" relationship="" use_default_formatting="true" sequence="1"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="name_last" relationship="" use_default_formatting="true" sequence="2"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item></data_layout_group><data_layout_group name="main" title="" columns_count="2" sequence="2"><data_layout_group name="name" title="Name" columns_count="1" sequence="1"><data_layout_item name="name_title" relationship="" use_default_formatting="true" sequence="1"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="name_first" relationship="" use_default_formatting="true" sequence="2"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="name_second" relationship="" use_default_formatting="true" sequence="3"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="name_last" relationship="" use_default_formatting="true" sequence="4"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item></data_layout_group><data_layout_group name="address" title="Address" columns_count="1" sequence="2"><data_layout_item name="address_state" relationship="" use_default_formatting="true" sequence="1"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="address_street" relationship="" use_default_formatting="true" sequence="2"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="address_country" relationship="" use_default_formatting="true" sequence="3"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="address_postcode" relationship="" use_default_formatting="true" sequence="4"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="address_town" relationship="" use_default_formatting="true" sequence="5"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item></data_layout_group><data_layout_item name="date_of_birth" relationship="" use_default_formatting="true" sequence="3"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item></data_layout_group></data_layout_groups></data_layout><data_layout name="list" parent_table="staff"><data_layout_groups><data_layout_group name="main" title="" columns_count="1" sequence="1"><data_layout_item name="staff_id" relationship="" use_default_formatting="true" sequence="1"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="name_first" relationship="" use_default_formatting="true" sequence="2"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="name_last" relationship="" use_default_formatting="true" sequence="3"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="address_state" relationship="" use_default_formatting="true" sequence="4"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="address_country" relationship="" use_default_formatting="true" sequence="5"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="date_of_birth" relationship="" use_default_formatting="true" sequence="6"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item></data_layout_group></data_layout_groups></data_layout></data_layouts><reports/>
+</table><table name="staff" title="Staff"><fields><field name="staff_id" title="Staff ID" primary_key="true" unique="true" auto_increment="true" type="Number"><formatting format_thousands_separator="true" format_decimal_places="2"/></field><field name="name_title" title="Title" type="Text"><formatting format_thousands_separator="true" format_decimal_places="2"/></field><field name="name_first" title="First Name" type="Text"><formatting format_thousands_separator="true" format_decimal_places="2"/></field><field name="name_second" title="Second Name" type="Text"><formatting format_thousands_separator="true" format_decimal_places="2"/></field><field name="name_last" title="Last Name" type="Text"><formatting format_thousands_separator="true" format_decimal_places="2"/></field><field name="address_street" title="Street" type="Text"><formatting format_thousands_separator="true" format_decimal_places="2"/></field><field name="address_town" title="Town" type="Text"><formatting format_thousands_separator="true" format_decimal_places="2"/></field><field name="address_state" title="State" type="Text"><formatting format_thousands_separator="true" format_decimal_places="2"/></field><field name="address_country" title="Country" type="Text"><formatting format_thousands_separator="true" format_decimal_places="2"/></field><field name="address_postcode" title="Postcode" type="Text"><formatting format_thousands_separator="true" format_decimal_places="2"/></field><field name="date_of_birth" title="Date Of Birth" type="Date"><formatting format_thousands_separator="true" format_decimal_places="2"/></field></fields><relationships/><data_layouts><data_layout name="details" parent_table="staff"><data_layout_groups><data_layout_group name="header" title="Overview" columns_count="2" sequence="1"><data_layout_item name="staff_id" relationship="" use_default_formatting="true" sequence="1"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="name_last" relationship="" editable="true" use_default_formatting="true" sequence="2"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item></data_layout_group><data_layout_group name="main" title="" columns_count="2" sequence="2"><data_layout_group name="name" title="Name" columns_count="1" sequence="1"><data_layout_item name="name_title" relationship="" editable="true" use_default_formatting="true" sequence="1"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="name_first" relationship="" editable="true" use_default_formatting="true" sequence="2"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="name_second" relationship="" editable="true" use_default_formatting="true" sequence="3"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="name_last" relationship="" editable="true" use_default_formatting="true" sequence="4"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item></data_layout_group><data_layout_group name="address" title="Address" columns_count="1" sequence="2"><data_layout_item name="address_state" relationship="" editable="true" use_default_formatting="true" sequence="1"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="address_street" relationship="" editable="true" use_default_formatting="true" sequence="2"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="address_country" relationship="" editable="true" use_default_formatting="true" sequence="3"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="address_postcode" relationship="" editable="true" use_default_formatting="true" sequence="4"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="address_town" relationship="" editable="true" use_default_formatting="true" sequence="5"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item></data_layout_group><data_layout_item name="date_of_birth" relationship="" editable="true" use_default_formatting="true" sequence="3"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item></data_layout_group></data_layout_groups></data_layout><data_layout name="list" parent_table="staff"><data_layout_groups><data_layout_group name="main" title="" columns_count="1" sequence="1"><data_layout_item name="staff_id" relationship="" use_default_formatting="true" sequence="1"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="name_first" relationship="" editable="true" use_default_formatting="true" sequence="2"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="name_last" relationship="" editable="true" use_default_formatting="true" sequence="3"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="address_state" relationship="" editable="true" use_default_formatting="true" sequence="4"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="address_country" relationship="" editable="true" use_default_formatting="true" sequence="5"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item><data_layout_item name="date_of_birth" relationship="" editable="true" use_default_formatting="true" sequence="6"><formatting format_thousands_separator="true" format_decimal_places="2"/></data_layout_item></data_layout_group></data_layout_groups></data_layout></data_layouts><reports/>
 
 </table><groups><!--These are only used when recreating a database from an example file. The actual access-control is on the server, of course.--><group name=""/><table_privs table_name="contacts" priv_view="true" priv_edit="true"/><table_privs table_name="invoice_lines" priv_view="true" priv_edit="true"/><table_privs table_name="invoices" priv_view="true" priv_edit="true"/><table_privs table_name="products" priv_view="true"/><table_privs table_name="staff" priv_view="true" priv_edit="true" priv_create="true" priv_delete="true"/><group name="accounts"/><table_privs table_name="contacts" priv_view="true" priv_edit="true"/><table_privs table_name="invoice_lines" priv_view="true" priv_edit="true"/><table_privs table_name="invoices" priv_view="true" priv_edit="true"/><table_privs table_name="products" priv_view="true"/><table_privs table_name="staff" priv_view="true" priv_edit="true" priv_create="true" priv_delete="true"/><group name="glom_developer"/><table_privs table_name="contacts" priv_view="true" priv_edit="true"/><table_privs table_name="invoice_lines" priv_view="true" priv_edit="true"/><table_privs table_name="invoices" priv_view="true" priv_edit="true"/><table_privs table_name="products" priv_view="true"/><table_privs table_name="staff" priv_view="true" priv_edit="true" priv_create="true" priv_delete="true"/><group name="personnel_department"/><table_privs table_name="contacts" priv_view="true" priv_edit="true"/><table_privs table_name="invoice_lines" priv_view="true" priv_edit="true"/><table_privs table_name="invoices" priv_view="true" priv_edit="true"/><table_privs table_name="products" priv_view="true"/><table_privs table_name="staff" priv_view="true" priv_edit="true" priv_create="true" priv_delete="true"/></groups></glom_document>
